; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/user32/extr_win.c_test_window_styles.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/user32/extr_win.c_test_window_styles.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WS_CLIPSIBLINGS = common dso_local global i32 0, align 4
@WS_CAPTION = common dso_local global i32 0, align 4
@WS_EX_WINDOWEDGE = common dso_local global i32 0, align 4
@WS_DLGFRAME = common dso_local global i32 0, align 4
@WS_THICKFRAME = common dso_local global i32 0, align 4
@WS_EX_STATICEDGE = common dso_local global i32 0, align 4
@WS_OVERLAPPEDWINDOW = common dso_local global i32 0, align 4
@WS_CHILD = common dso_local global i32 0, align 4
@WS_SYSMENU = common dso_local global i32 0, align 4
@WS_EX_DLGMODALFRAME = common dso_local global i32 0, align 4
@WS_POPUP = common dso_local global i32 0, align 4
@WS_EX_APPWINDOW = common dso_local global i32 0, align 4
@WS_EX_TOOLWINDOW = common dso_local global i32 0, align 4
@pGetLayeredWindowAttributes = common dso_local global i64 0, align 8
@WS_EX_LAYERED = common dso_local global i32 0, align 4
@WS_EX_TRANSPARENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_window_styles to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_window_styles() #0 {
  %1 = call i32 (...) @register_style_check_class()
  %2 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %3 = load i32, i32* @WS_CAPTION, align 4
  %4 = or i32 %2, %3
  %5 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %6 = call i32 @check_window_style(i32 0, i32 0, i32 %4, i32 %5)
  %7 = load i32, i32* @WS_DLGFRAME, align 4
  %8 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %9 = load i32, i32* @WS_CAPTION, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %12 = call i32 @check_window_style(i32 %7, i32 0, i32 %10, i32 %11)
  %13 = load i32, i32* @WS_THICKFRAME, align 4
  %14 = load i32, i32* @WS_THICKFRAME, align 4
  %15 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @WS_CAPTION, align 4
  %18 = or i32 %16, %17
  %19 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %20 = call i32 @check_window_style(i32 %13, i32 0, i32 %18, i32 %19)
  %21 = load i32, i32* @WS_DLGFRAME, align 4
  %22 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %23 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %24 = load i32, i32* @WS_CAPTION, align 4
  %25 = or i32 %23, %24
  %26 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %27 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %28 = or i32 %26, %27
  %29 = call i32 @check_window_style(i32 %21, i32 %22, i32 %25, i32 %28)
  %30 = load i32, i32* @WS_THICKFRAME, align 4
  %31 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %32 = load i32, i32* @WS_THICKFRAME, align 4
  %33 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %34 = or i32 %32, %33
  %35 = load i32, i32* @WS_CAPTION, align 4
  %36 = or i32 %34, %35
  %37 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %38 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %39 = or i32 %37, %38
  %40 = call i32 @check_window_style(i32 %30, i32 %31, i32 %36, i32 %39)
  %41 = load i32, i32* @WS_OVERLAPPEDWINDOW, align 4
  %42 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %43 = load i32, i32* @WS_OVERLAPPEDWINDOW, align 4
  %44 = or i32 %42, %43
  %45 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %46 = call i32 @check_window_style(i32 %41, i32 0, i32 %44, i32 %45)
  %47 = load i32, i32* @WS_CHILD, align 4
  %48 = load i32, i32* @WS_CHILD, align 4
  %49 = call i32 @check_window_style(i32 %47, i32 0, i32 %48, i32 0)
  %50 = load i32, i32* @WS_CHILD, align 4
  %51 = load i32, i32* @WS_DLGFRAME, align 4
  %52 = or i32 %50, %51
  %53 = load i32, i32* @WS_CHILD, align 4
  %54 = load i32, i32* @WS_DLGFRAME, align 4
  %55 = or i32 %53, %54
  %56 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %57 = call i32 @check_window_style(i32 %52, i32 0, i32 %55, i32 %56)
  %58 = load i32, i32* @WS_CHILD, align 4
  %59 = load i32, i32* @WS_THICKFRAME, align 4
  %60 = or i32 %58, %59
  %61 = load i32, i32* @WS_CHILD, align 4
  %62 = load i32, i32* @WS_THICKFRAME, align 4
  %63 = or i32 %61, %62
  %64 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %65 = call i32 @check_window_style(i32 %60, i32 0, i32 %63, i32 %64)
  %66 = load i32, i32* @WS_CHILD, align 4
  %67 = load i32, i32* @WS_DLGFRAME, align 4
  %68 = or i32 %66, %67
  %69 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %70 = load i32, i32* @WS_CHILD, align 4
  %71 = load i32, i32* @WS_DLGFRAME, align 4
  %72 = or i32 %70, %71
  %73 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %74 = call i32 @check_window_style(i32 %68, i32 %69, i32 %72, i32 %73)
  %75 = load i32, i32* @WS_CHILD, align 4
  %76 = load i32, i32* @WS_THICKFRAME, align 4
  %77 = or i32 %75, %76
  %78 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %79 = load i32, i32* @WS_CHILD, align 4
  %80 = load i32, i32* @WS_THICKFRAME, align 4
  %81 = or i32 %79, %80
  %82 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %83 = call i32 @check_window_style(i32 %77, i32 %78, i32 %81, i32 %82)
  %84 = load i32, i32* @WS_CHILD, align 4
  %85 = load i32, i32* @WS_CAPTION, align 4
  %86 = or i32 %84, %85
  %87 = load i32, i32* @WS_CHILD, align 4
  %88 = load i32, i32* @WS_CAPTION, align 4
  %89 = or i32 %87, %88
  %90 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %91 = call i32 @check_window_style(i32 %86, i32 0, i32 %89, i32 %90)
  %92 = load i32, i32* @WS_CHILD, align 4
  %93 = load i32, i32* @WS_CAPTION, align 4
  %94 = or i32 %92, %93
  %95 = load i32, i32* @WS_SYSMENU, align 4
  %96 = or i32 %94, %95
  %97 = load i32, i32* @WS_CHILD, align 4
  %98 = load i32, i32* @WS_CAPTION, align 4
  %99 = or i32 %97, %98
  %100 = load i32, i32* @WS_SYSMENU, align 4
  %101 = or i32 %99, %100
  %102 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %103 = call i32 @check_window_style(i32 %96, i32 0, i32 %101, i32 %102)
  %104 = load i32, i32* @WS_CHILD, align 4
  %105 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %106 = load i32, i32* @WS_CHILD, align 4
  %107 = call i32 @check_window_style(i32 %104, i32 %105, i32 %106, i32 0)
  %108 = load i32, i32* @WS_CHILD, align 4
  %109 = load i32, i32* @WS_EX_DLGMODALFRAME, align 4
  %110 = load i32, i32* @WS_CHILD, align 4
  %111 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %112 = load i32, i32* @WS_EX_DLGMODALFRAME, align 4
  %113 = or i32 %111, %112
  %114 = call i32 @check_window_style(i32 %108, i32 %109, i32 %110, i32 %113)
  %115 = load i32, i32* @WS_CHILD, align 4
  %116 = load i32, i32* @WS_EX_DLGMODALFRAME, align 4
  %117 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %118 = or i32 %116, %117
  %119 = load i32, i32* @WS_CHILD, align 4
  %120 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %121 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %122 = or i32 %120, %121
  %123 = load i32, i32* @WS_EX_DLGMODALFRAME, align 4
  %124 = or i32 %122, %123
  %125 = call i32 @check_window_style(i32 %115, i32 %118, i32 %119, i32 %124)
  %126 = load i32, i32* @WS_CHILD, align 4
  %127 = load i32, i32* @WS_POPUP, align 4
  %128 = or i32 %126, %127
  %129 = load i32, i32* @WS_CHILD, align 4
  %130 = load i32, i32* @WS_POPUP, align 4
  %131 = or i32 %129, %130
  %132 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %133 = or i32 %131, %132
  %134 = call i32 @check_window_style(i32 %128, i32 0, i32 %133, i32 0)
  %135 = load i32, i32* @WS_CHILD, align 4
  %136 = load i32, i32* @WS_POPUP, align 4
  %137 = or i32 %135, %136
  %138 = load i32, i32* @WS_DLGFRAME, align 4
  %139 = or i32 %137, %138
  %140 = load i32, i32* @WS_CHILD, align 4
  %141 = load i32, i32* @WS_POPUP, align 4
  %142 = or i32 %140, %141
  %143 = load i32, i32* @WS_DLGFRAME, align 4
  %144 = or i32 %142, %143
  %145 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %146 = or i32 %144, %145
  %147 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %148 = call i32 @check_window_style(i32 %139, i32 0, i32 %146, i32 %147)
  %149 = load i32, i32* @WS_CHILD, align 4
  %150 = load i32, i32* @WS_POPUP, align 4
  %151 = or i32 %149, %150
  %152 = load i32, i32* @WS_THICKFRAME, align 4
  %153 = or i32 %151, %152
  %154 = load i32, i32* @WS_CHILD, align 4
  %155 = load i32, i32* @WS_POPUP, align 4
  %156 = or i32 %154, %155
  %157 = load i32, i32* @WS_THICKFRAME, align 4
  %158 = or i32 %156, %157
  %159 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %160 = or i32 %158, %159
  %161 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %162 = call i32 @check_window_style(i32 %153, i32 0, i32 %160, i32 %161)
  %163 = load i32, i32* @WS_CHILD, align 4
  %164 = load i32, i32* @WS_POPUP, align 4
  %165 = or i32 %163, %164
  %166 = load i32, i32* @WS_DLGFRAME, align 4
  %167 = or i32 %165, %166
  %168 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %169 = load i32, i32* @WS_CHILD, align 4
  %170 = load i32, i32* @WS_POPUP, align 4
  %171 = or i32 %169, %170
  %172 = load i32, i32* @WS_DLGFRAME, align 4
  %173 = or i32 %171, %172
  %174 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %175 = or i32 %173, %174
  %176 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %177 = call i32 @check_window_style(i32 %167, i32 %168, i32 %175, i32 %176)
  %178 = load i32, i32* @WS_CHILD, align 4
  %179 = load i32, i32* @WS_POPUP, align 4
  %180 = or i32 %178, %179
  %181 = load i32, i32* @WS_THICKFRAME, align 4
  %182 = or i32 %180, %181
  %183 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %184 = load i32, i32* @WS_CHILD, align 4
  %185 = load i32, i32* @WS_POPUP, align 4
  %186 = or i32 %184, %185
  %187 = load i32, i32* @WS_THICKFRAME, align 4
  %188 = or i32 %186, %187
  %189 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %190 = or i32 %188, %189
  %191 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %192 = call i32 @check_window_style(i32 %182, i32 %183, i32 %190, i32 %191)
  %193 = load i32, i32* @WS_CHILD, align 4
  %194 = load i32, i32* @WS_POPUP, align 4
  %195 = or i32 %193, %194
  %196 = load i32, i32* @WS_EX_APPWINDOW, align 4
  %197 = load i32, i32* @WS_CHILD, align 4
  %198 = load i32, i32* @WS_POPUP, align 4
  %199 = or i32 %197, %198
  %200 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %201 = or i32 %199, %200
  %202 = load i32, i32* @WS_EX_APPWINDOW, align 4
  %203 = call i32 @check_window_style(i32 %195, i32 %196, i32 %201, i32 %202)
  %204 = load i32, i32* @WS_CHILD, align 4
  %205 = load i32, i32* @WS_POPUP, align 4
  %206 = or i32 %204, %205
  %207 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %208 = load i32, i32* @WS_CHILD, align 4
  %209 = load i32, i32* @WS_POPUP, align 4
  %210 = or i32 %208, %209
  %211 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %212 = or i32 %210, %211
  %213 = call i32 @check_window_style(i32 %206, i32 %207, i32 %212, i32 0)
  %214 = load i32, i32* @WS_CHILD, align 4
  %215 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %216 = load i32, i32* @WS_CHILD, align 4
  %217 = call i32 @check_window_style(i32 %214, i32 %215, i32 %216, i32 0)
  %218 = load i32, i32* @WS_EX_TOOLWINDOW, align 4
  %219 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %220 = load i32, i32* @WS_CAPTION, align 4
  %221 = or i32 %219, %220
  %222 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %223 = load i32, i32* @WS_EX_TOOLWINDOW, align 4
  %224 = or i32 %222, %223
  %225 = call i32 @check_window_style(i32 0, i32 %218, i32 %221, i32 %224)
  %226 = load i32, i32* @WS_POPUP, align 4
  %227 = load i32, i32* @WS_POPUP, align 4
  %228 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %229 = or i32 %227, %228
  %230 = call i32 @check_window_style(i32 %226, i32 0, i32 %229, i32 0)
  %231 = load i32, i32* @WS_POPUP, align 4
  %232 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %233 = load i32, i32* @WS_POPUP, align 4
  %234 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %235 = or i32 %233, %234
  %236 = call i32 @check_window_style(i32 %231, i32 %232, i32 %235, i32 0)
  %237 = load i32, i32* @WS_POPUP, align 4
  %238 = load i32, i32* @WS_DLGFRAME, align 4
  %239 = or i32 %237, %238
  %240 = load i32, i32* @WS_POPUP, align 4
  %241 = load i32, i32* @WS_DLGFRAME, align 4
  %242 = or i32 %240, %241
  %243 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %244 = or i32 %242, %243
  %245 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %246 = call i32 @check_window_style(i32 %239, i32 0, i32 %244, i32 %245)
  %247 = load i32, i32* @WS_POPUP, align 4
  %248 = load i32, i32* @WS_THICKFRAME, align 4
  %249 = or i32 %247, %248
  %250 = load i32, i32* @WS_POPUP, align 4
  %251 = load i32, i32* @WS_THICKFRAME, align 4
  %252 = or i32 %250, %251
  %253 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %254 = or i32 %252, %253
  %255 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %256 = call i32 @check_window_style(i32 %249, i32 0, i32 %254, i32 %255)
  %257 = load i32, i32* @WS_POPUP, align 4
  %258 = load i32, i32* @WS_DLGFRAME, align 4
  %259 = or i32 %257, %258
  %260 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %261 = load i32, i32* @WS_POPUP, align 4
  %262 = load i32, i32* @WS_DLGFRAME, align 4
  %263 = or i32 %261, %262
  %264 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %265 = or i32 %263, %264
  %266 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %267 = call i32 @check_window_style(i32 %259, i32 %260, i32 %265, i32 %266)
  %268 = load i32, i32* @WS_POPUP, align 4
  %269 = load i32, i32* @WS_THICKFRAME, align 4
  %270 = or i32 %268, %269
  %271 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %272 = load i32, i32* @WS_POPUP, align 4
  %273 = load i32, i32* @WS_THICKFRAME, align 4
  %274 = or i32 %272, %273
  %275 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %276 = or i32 %274, %275
  %277 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %278 = call i32 @check_window_style(i32 %270, i32 %271, i32 %276, i32 %277)
  %279 = load i32, i32* @WS_CAPTION, align 4
  %280 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %281 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %282 = load i32, i32* @WS_CAPTION, align 4
  %283 = or i32 %281, %282
  %284 = load i32, i32* @WS_EX_STATICEDGE, align 4
  %285 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %286 = or i32 %284, %285
  %287 = call i32 @check_window_style(i32 %279, i32 %280, i32 %283, i32 %286)
  %288 = load i32, i32* @WS_EX_APPWINDOW, align 4
  %289 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %290 = load i32, i32* @WS_CAPTION, align 4
  %291 = or i32 %289, %290
  %292 = load i32, i32* @WS_EX_APPWINDOW, align 4
  %293 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %294 = or i32 %292, %293
  %295 = call i32 @check_window_style(i32 0, i32 %288, i32 %291, i32 %294)
  %296 = load i64, i64* @pGetLayeredWindowAttributes, align 8
  %297 = icmp ne i64 %296, 0
  br i1 %297, label %298, label %335

298:                                              ; preds = %0
  %299 = load i32, i32* @WS_EX_LAYERED, align 4
  %300 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %301 = load i32, i32* @WS_CAPTION, align 4
  %302 = or i32 %300, %301
  %303 = load i32, i32* @WS_EX_LAYERED, align 4
  %304 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %305 = or i32 %303, %304
  %306 = call i32 @check_window_style(i32 0, i32 %299, i32 %302, i32 %305)
  %307 = load i32, i32* @WS_EX_LAYERED, align 4
  %308 = load i32, i32* @WS_EX_TRANSPARENT, align 4
  %309 = or i32 %307, %308
  %310 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %311 = load i32, i32* @WS_CAPTION, align 4
  %312 = or i32 %310, %311
  %313 = load i32, i32* @WS_EX_LAYERED, align 4
  %314 = load i32, i32* @WS_EX_TRANSPARENT, align 4
  %315 = or i32 %313, %314
  %316 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %317 = or i32 %315, %316
  %318 = call i32 @check_window_style(i32 0, i32 %309, i32 %312, i32 %317)
  %319 = load i32, i32* @WS_EX_LAYERED, align 4
  %320 = load i32, i32* @WS_EX_TRANSPARENT, align 4
  %321 = or i32 %319, %320
  %322 = load i32, i32* @WS_EX_TOOLWINDOW, align 4
  %323 = or i32 %321, %322
  %324 = load i32, i32* @WS_CLIPSIBLINGS, align 4
  %325 = load i32, i32* @WS_CAPTION, align 4
  %326 = or i32 %324, %325
  %327 = load i32, i32* @WS_EX_LAYERED, align 4
  %328 = load i32, i32* @WS_EX_TRANSPARENT, align 4
  %329 = or i32 %327, %328
  %330 = load i32, i32* @WS_EX_TOOLWINDOW, align 4
  %331 = or i32 %329, %330
  %332 = load i32, i32* @WS_EX_WINDOWEDGE, align 4
  %333 = or i32 %331, %332
  %334 = call i32 @check_window_style(i32 0, i32 %323, i32 %326, i32 %333)
  br label %335

335:                                              ; preds = %298, %0
  ret void
}

declare dso_local i32 @register_style_check_class(...) #1

declare dso_local i32 @check_window_style(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
